--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,13 @@
+:root {
+	--Hue: 0;
+	--Saturation: 75%;
+	--Lightness: 50%;
+
+	--Font-Title: 'Playfair Display', Serif;
+	--Font-Text: 'Lora', Serif;
+	--Font-UI: 'Google Sans', System-ui, Sans-serif;
+}
+
 HTML {
   Width: 100%;
   Height: 100%;
