--- a/Authors.css
+++ b/Authors.css
@@ -53,9 +53,10 @@ Main > .Authors > .Author > .Header {
 }
 
 Main > .Authors > .Author > .Header > Img {
-  Clip-path: Circle(45px);
+  Clip-path: Circle(44px);
   Width: 90px;
   Height: 90px;
+  Background-color: Var(--Fallback, Var(--Gray-15));
 }
 
 Main > .Authors > .Author > .Header > Div {
