--- a/index.scss
+++ b/index.scss
@@ -4,7 +4,15 @@
 
 Header
 {
-	Padding: 20px 30px;
+	@media ($WideScreen)
+	{
+		Padding: 20px 30px;
+	}
+
+	@media ($NarrowScreen)
+	{
+		Padding: 20px;
+	}
 
 	& > A
 	{
