--- a/Article.css
+++ b/Article.css
@@ -9,7 +9,7 @@ Body {
 }
 
 Body {
-  Background-color: HSL(36, 15%, 95%);
+  Background-color: Var(--Background-00);
 }
 
 Body > Header {
@@ -93,11 +93,6 @@ Body > Article > .Body > H2 {
   Font-size: 16px;
   Text-align: Center;
   Font-size: 20.5px;
-}
-
-Body > Article > .Body P.Highlighted {
-  Border-left: 3.5px Solid HSL(Var(--Hue), Calc(Var(--Saturation) * 0.75), Var(--Lightness));
-  Padding: 10px 10px 10px 20px;
 }
 
 Body > Article > .Body UL {
