--- a/Content.scss
+++ b/Content.scss
@@ -3,23 +3,32 @@
 
 Body
 {
-	Gap: 25px;
-
 	@media ($WideScreen)
 	{
-		Padding: 50px;
+		Gap: 100px;
+		Padding: 100px 0 100px 50px;
 	}
 
 	@media ($NarrowScreen)
 	{
-		Padding: 20px;
+		Gap: 50px;
+		Padding: 50px 0 50px 20px;
 	}
 
 	& > H1
 	{
 		@include Reset_H;
-		Font-size: 32px;
 		Font-family: Var(--Font-Title);
+
+		@media ($WideScreen)
+		{
+			Font-size: 38px;
+		}
+
+		@media ($NarrowScreen)
+		{
+			Font-size: 32px;
+		}
 	}
 
 	& > UL
@@ -27,8 +36,17 @@ Body
 		@include Reset_UL;
 		Padding-left: 35px;
 		Font-family: Var(--Font-Text);
-		Overflow-X: Auto;
-		Overflow-Y: Hidden;
+		Margin: Auto;
+
+		@media ($WideScreen)
+		{
+			Padding-right: 50px;
+		}
+
+		@media ($NarrowScreen)
+		{
+			Padding-right: 20px;
+		}
 
 		UL
 		{
@@ -42,7 +60,12 @@ Body
 			Margin-top: 7.5px;
 			White-space: Nowrap;
 
-			&::marker
+			&.Hub::marker
+			{
+				Content: '○   ';
+			}
+
+			&:not(.Hub)::marker
 			{
 				Content: '−   ';
 			}
